Signup: Fix misaligned labels on domains page.
Resolve #16560, #11521

--- a/client/components/domains/domain-product-price/style.scss
+++ b/client/components/domains/domain-product-price/style.scss
@@ -18,6 +18,11 @@
 		small {
 			font-size: 12px;
 		}
+
+		@include breakpoint( ">660px" ) {
+			display: flex;
+			align-items: center;
+		}
 	}
 
 	.map-domain-step & {
